<?xml version="1.0"?>
<package format="2">
  <name>erp42_2020</name>
  <version>1.0.0</version>
  <description>The erp42_2020 package</description>
  <maintainer email="hoyeong@dgist.ac.kr">hoyeong</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>

  </export>
</package>
