<package>
    <name>hdmap_msg</name>
    <version>1.14.0</version>
    <description>
        ustom messages for Hd map ARTIV Lab DGIST
    </description>
    <author>Gwanjun Shin</author>
    <maintainer email="shinkansan@dgist.ac.kr">Gwanjun Shin</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>

</package>
